<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".forgot_password.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:orientation="vertical">

        <ImageView
            android:layout_width="245px"
            android:layout_height="75px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash_logo" />


        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="360dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/grey_200"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/forgot_password_title"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/whiteApp"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_subscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/forgot_password_description"
                android:textAlignment="center"
                android:textColor="@drawable/text_states"

                android:textSize="16sp" />


            <EditText
                android:id="@+id/ed_email"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_states"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:fontFamily="@font/product_sans_light"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/edBorderColor"
                android:textColorHint="@color/edBorderColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_states"
                android:fontFamily="@font/product_sans_regular"
                android:padding="4dp"
                android:text="@string/send_email"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/whiteApp"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>