<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg_image"
    tools:context=".playback.SubscriptionMessageActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dimens_20sp">
            <ImageView
                android:id="@+id/logo_IB"
                android:layout_width="163px"
                android:layout_height="48px"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="28dp"
                android:elevation="6dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/splash_logo2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription_msg"
                android:textColor="@color/whiteApp"
                android:fontFamily="@font/product_sans_bold"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/dimens_20sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/dimens_10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/grey_200"
                    android:layout_margin="8dp"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="28dp"
                            android:src="@drawable/english"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"
                            android:layout_marginStart="@dimen/dimens_10dp"
                            android:textColor="@color/whiteApp"
                            android:fontFamily="@font/product_sans_bold"
                            android:textSize="18sp"
                            />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subscription_en"
                        android:textColor="@color/text_color_gray"
                        android:fontFamily="@font/product_sans_regular"
                        android:layout_marginVertical="@dimen/dimens_10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/wish_msg"
                        android:textColor="@color/whiteApp"
                        android:fontFamily="@font/product_sans_bold"
                        android:layout_marginTop="@dimen/dimens_20sp"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:textSize="16sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/grey_200"
                    android:layout_margin="8dp"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="28dp"
                            android:src="@drawable/spanish"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spanish"
                            android:layout_marginStart="@dimen/dimens_10dp"
                            android:textColor="@color/whiteApp"
                            android:fontFamily="@font/product_sans_bold"
                            android:textSize="18sp"
                            />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subscription_spanish"
                        android:textColor="@color/text_color_gray"
                        android:fontFamily="@font/product_sans_regular"
                        android:layout_marginVertical="@dimen/dimens_10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/spanish_wish_msg"
                        android:textColor="@color/whiteApp"
                        android:fontFamily="@font/product_sans_bold"
                        android:layout_marginTop="@dimen/dimens_20sp"
                        android:textSize="16sp"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/grey_200"
                    android:layout_margin="8dp"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="28dp"
                            android:src="@drawable/italian"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/italian"
                            android:layout_marginStart="@dimen/dimens_10dp"
                            android:textColor="@color/whiteApp"
                            android:fontFamily="@font/product_sans_bold"
                            android:textSize="18sp"

                            />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subscription_italian"
                        android:textColor="@color/text_color_gray"
                        android:fontFamily="@font/product_sans_regular"
                        android:layout_marginVertical="@dimen/dimens_10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/italian_wish_msg"
                        android:textColor="@color/whiteApp"
                        android:fontFamily="@font/product_sans_bold"
                        android:layout_marginTop="@dimen/dimens_20sp"
                        android:textSize="16sp"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        />
                </LinearLayout>
            </LinearLayout>
           <Button
               android:id="@+id/back_to_home"
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:paddingHorizontal="40dp"
               android:text="Back to Home"
               android:textColor="@color/text_color_gray"
               android:background="@drawable/edittext_states"
               android:textAllCaps="false"
               android:layout_marginVertical="@dimen/dimens_20sp"
               android:nextFocusLeft="@id/back_to_home"
               android:nextFocusRight="@id/back_to_home"
               android:nextFocusDown="@id/back_to_home"
               android:nextFocusUp="@id/logo_IB"
               />
        </LinearLayout>
    </ScrollView>
</LinearLayout>