<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin.LogoutFragment"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo2"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_gravity = "center"
        android:background="@color/greyApp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/whiteApp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="22sp"
            android:fontFamily="@font/product_sans_regular"/>

        <TextView
            android:id="@+id/text_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/ask_logout_msg"
            android:textColor="@drawable/text_states"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/product_sans_regular"/>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/btn_OK"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/home_button_states"
            android:nextFocusRight="@id/btn_cancel"
            android:nextFocusUp="@id/btn_OK"
            android:nextFocusLeft="@id/btn_OK"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/home_button_states"
            android:nextFocusRight="@id/btn_cancel"
            android:nextFocusUp="@id/btn_cancel"
            android:nextFocusLeft="@id/btn_OK"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>