<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playback.PlaybackFragment">

    <ImageView
        android:id="@+id/video_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dimens_30dp"
        android:orientation="vertical"
        android:background="#85101012">
        <TextView
            android:id="@+id/title_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item_rectangle_focus_title"
            android:elevation="5dp"
            android:padding="@dimen/dimens_5dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center_vertical"
            android:text="@string/ncg_tv"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/description_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="6dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center_vertical"
            android:text="@string/tv_home_text"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:maxLines="15"
            android:ellipsize="end"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimens_30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/go_to_channel"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:background="@drawable/home_button_states"
                android:drawableLeft="@drawable/home_btn_focused_with_icon"
                android:elevation="6dp"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:nextFocusRight="@id/my_list"
                android:nextFocusLeft="@id/go_to_channel"
                android:nextFocusUp="@id/go_to_channel"
                android:nextFocusDown="@id/watch_other_episodes"
                android:text="@string/play_now"
                android:textColor="@color/whiteApp"
                android:textSize="13sp"
                android:paddingEnd="@dimen/dimens_10dp"
                android:focusable="true"
                android:focusedByDefault="true"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/my_list"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"

                android:background="@drawable/home_button_states"
                android:drawableLeft="@drawable/home_list_btn_focused_with_icon"
                android:elevation="6dp"
                android:paddingEnd="@dimen/dimens_10dp"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:text="@string/my_list"
                android:textColor="@color/whiteApp"
                android:textSize="13sp"
                android:nextFocusLeft="@id/go_to_channel"
                android:nextFocusRight="@id/my_list"
                android:nextFocusUp="@id/my_list"
                android:nextFocusDown="@id/go_to_channel1"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimens_10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/watch_other_episodes"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:background="@drawable/home_button_states"
                android:drawableLeft="@drawable/home_btn_focused_with_icon"
                android:elevation="6dp"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:nextFocusRight="@id/go_to_channel1"
                android:nextFocusLeft="@id/go_to_channel"
                android:nextFocusUp="@id/go_to_channel"
                android:nextFocusDown="@id/go_to_channel1"
                android:text="@string/watch_other_episodes"
                android:textColor="@color/whiteApp"
                android:textSize="10sp"
                android:textAlignment="center"
                android:paddingEnd="@dimen/dimens_10dp"
                android:focusable="true"
                android:focusedByDefault="true"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/go_to_channel1"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/home_button_states"
                android:drawableLeft="@drawable/home_btn_focused_with_icon"
                android:elevation="6dp"
                android:paddingEnd="@dimen/dimens_10dp"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/go_to_channel"
                android:textColor="@color/whiteApp"
                android:textSize="10sp"
                android:nextFocusLeft="@id/watch_other_episodes"
                android:nextFocusRight="@id/go_to_channel1"
                android:nextFocusUp="@id/my_list"
                android:nextFocusDown="@id/go_to_channel1"
                android:textAllCaps="false"
                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>