<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playback.PlaybackActivity">
    <ImageView
        android:id="@+id/logo_IB"
        android:layout_width="163px"
        android:layout_height="48px"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:elevation="6dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/title_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:elevation="6dp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center_vertical"
        android:text="@string/ncg_tv"
        android:textColor="@color/redApp"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_IB"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/description_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:elevation="6dp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center_vertical"
        android:text="@string/tv_home_text"
        android:textColor="#FFFFFFFF"
        android:textSize="13sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_TV"
        android:visibility="gone"/>
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:resize_mode="fill"
        app:rewind_increment="10000"
        app:fastforward_increment="10000"
        app:auto_show="true"
        app:surface_type="surface_view"
        app:use_controller="true"
        app:controller_layout_id="@layout/exoplayer_custom_controll_playback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>
<!--    app:controller_layout_id="@layout/exoplayer_custom_controll"-->
